[package]
name = "music-app-ui"
version = "0.0.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos-use = "0.10"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[workspace]
members = ["src-tauri"]
