[package]
name = "music-app-backend"
description = "Tauri Backend for Music App"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "music_app_backend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
serde.workspace = true
serde_json = "1"
image_colors = "0.5.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
