[package]
name = "music-app-backend"
description = "Tauri Backend for Music App"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "music_app_backend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json = "1"
