[package]
name = "music-app-frontend"
description = "Frontend UI for the Music App"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
leptos-use = "0.10"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde.workspace = true
serde-wasm-bindgen = "0.6"
music-app-lib = { path = "../music-app-lib" }
palette = "0.7.5"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "CanvasRenderingContext2d",
    "ImageData"
]
