[package]
name = "music-app-frontend"
description = "Frontend UI for the Music App"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_router = "0.7"
reactive_stores = "0.1.0"
leptos-use = "0.14"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde.workspace = true
serde-wasm-bindgen = "0.6"
music-app-lib = { path = "../music-app-lib" }
palette = "0.7.5"
console_error_panic_hook = "0.1.7"
# Force compat fix for indirect dependency
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlButtonElement",
    "HtmlAudioElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "EventListener"
]

[lints.clippy]
empty_docs = "allow"